examples/test/testpolicy15210.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15210
  namespace: namespace343
spec:
  podSelector:
    matchLabels:
      key9: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value7
          key30: value5
          key14: value17
      podSelector:
        matchLabels:
          key33: value37
          key12: value31
          key0: value2
